Initial project setup

--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
 PORT=8080
+
+MONGO_USER=hcywka
+MONGO_PASSWORD=LAxG5CCwuURi7vc0
+MONGO_PATH=teamup.sbhxjoc.mongodb.net/?retryWrites=true&w=majority
+
+JWT_TIME=15
+JWT_SECRET=SECRET
