--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Hubert Cywka",
   "license": "ISC",
   "dependencies": {
+    "@types/morgan": "^1.9.4",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -28,6 +29,7 @@
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.3",
+    "morgan": "^1.10.0",
     "winston": "^3.9.0"
   },
   "devDependencies": {
