--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.1.2",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.0",
     "migrate-mongo": "^10.0.0",
