--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "mongodb": "^5.6.0",
     "mongoose": "^7.2.3",
     "morgan": "^1.10.0",
+    "reflect-metadata": "^0.1.13",
     "supertest": "^6.3.3",
     "winston": "^3.9.0"
   },
