--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^16.1.2",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "express-rate-limit": "^6.8.0",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.0",
     "migrate-mongo": "^10.0.0",
