TU-30: Vercel deployment setup

--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "server.ts",
+  "main": "src/index.ts",
   "esModuleInterop": true,
   "moduleResolution": "node",
   "allowSyntheticDefaultImports": true,
   "scripts": {
-    "dev": "ts-node-dev --respawn --pretty src/server.ts",
-    "start": "ts-node src/server.ts",
+    "dev": "ts-node-dev --respawn --pretty src/index.ts",
+    "start": "ts-node src/index.ts",
     "format:check": "prettier --check .",
     "format:write": "prettier --write .",
     "lint:check": "eslint .",
