--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,7 +1,6 @@
 name: Node.js CI
 
-on:
-  pull_request
+on: pull_request
 
 env:
   PORT: ${{ secrets.PORT }}
@@ -27,7 +26,6 @@ env:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     permissions:
